syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ofagbola/Editor-RPM-Backend/questionnaire/pb";

message CreateQuestionConfigRequest {
    string code = 1;
    string title = 2;
    string description = 3;
    repeated string questions = 4;
    string created_by = 5;
}

message CreateQuestionConfigResponse {
    QuestionConfig question_config = 1;
}

message QuestionConfig {
    int32 id = 1;
    string code = 2;
    string title = 3;
    string description = 4;
    repeated string questions = 5;
    string created_by = 6;
    google.protobuf.Timestamp created_at = 7;
}  